Add library pooling worklist generator

--- a/toolbox/templates/layout.html
+++ b/toolbox/templates/layout.html
@@ -28,6 +28,7 @@
                 <i class="dropdown icon"></i>
                 <div class="menu">
                     <a class="item" href="{{ url_for('worklists', function='partpooling') }}">Part Pooling</a>
+                    <a class="item" href="{{ url_for('worklists', function='librarypooling') }}">Library Pooling</a>
                 </div>
             </div>
         </div>
