--- a/toolbox/templates/worklists.html
+++ b/toolbox/templates/worklists.html
@@ -3,7 +3,7 @@
 <div class="ui grid divided horizontally padded">
     <div class="eleven wide column">
         {% if error %}
-            <div class="ui floating message">
+            <div class="ui large icon warning message">
                 <i class="warning circle icon"></i>
                 <div class="content">
                     <div class="header">Error</div>
