--- a/toolbox/templates/index.html
+++ b/toolbox/templates/index.html
@@ -2,7 +2,10 @@
 {% block content %}
 <div class="ui center aligned container">
     <div class="ui very padded blue segment">
-        Welcome to the toolbox :)
+        <h1 class="ui center aligned icon header">
+            <i class="travel icon"></i>
+            Welcome to the toolbox
+        </h1>
     </div>
 </div>
 {% endblock %}
