--- a/toolbox/templates/layout.html
+++ b/toolbox/templates/layout.html
@@ -31,6 +31,13 @@
                     <a class="item" href="{{ url_for('worklists', function='librarypooling') }}">Library Pooling</a>
                 </div>
             </div>
+            <div class="ui dropdown item">
+                Converters
+                <i class="dropdown icon"></i>
+                <div class="menu">
+                    <a class="item" href="{{ url_for('converters', function='listtoplate') }}">List to plate</a>
+                </div>
+            </div>
         </div>
         {% block content %}{% endblock %}
         <script
