Add plate matrix worklist generator

--- a/toolbox/templates/layout.html
+++ b/toolbox/templates/layout.html
@@ -29,6 +29,7 @@
                 <div class="menu">
                     <a class="item" href="{{ url_for('worklists', function='partpooling') }}">Part Pooling</a>
                     <a class="item" href="{{ url_for('worklists', function='librarypooling') }}">Library Pooling</a>
+                    <a class="item" href="{{ url_for('worklists', function='matrix') }}">From plate matrix</a>
                 </div>
             </div>
             <div class="ui dropdown item">
